# Area-Empresa-Back-End

./: Dockerfile  GUIA_RAPIDO_MODELAGEM.md  MODELAGEM_BANCO_DADOS.md  README.md  README_DEV.md  add_domain.py  docker-compose.yml  endpoints_for_front.json  main.py  migrate_company_admins.py  pyproject.toml  seed_analytics.py
app/: config.py  database.py  security.py
app/abi/: data_consent_abi.json
app/audit_logs/: __init__.py  audit_controller.py  audit_log_model.py  audit_log_repository.py  audit_log_service.py
app/auth/: employee_auth_controller.py  employee_auth_service.py
app/companies/: __init__.py  analytics_service.py  api_key_service.py  company_api_key_model.py  company_controller.py  company_model.py  company_repository.py  company_service.py  company_webhook_model.py  data_usage_model.py  webhook_service.py
app/data/: __init__.py  data_controller.py  data_model.py  data_repository.py
app/employees/: __init__.py  employee_controller.py  employee_model.py  employee_repository.py  employee_service.py
app/health/: health_controller.py
app/notifications/: __init__.py  notification_controller.py  notification_model.py
app/services/: analytics_service.py  blockchain_indexer.py  pinata_service.py
app/utils/: config_model.py  config_repository.py  response.py
tests/: test_data_services.py
